Add tests in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-# Используем дистрибутив Ubuntu 16.04,
-# т.к. в образе предустановлен clang-format версии 7.
 language: C++
+
 dist: xenial
 
 script:
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code && make
-
-
+  - git ls-files src/ | xargs clang-format -i && git diff --exit-code && make && bin/geometry-test
