--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: C++
 dist: xenial
 
 script:
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code && make && bin/geometry_test.exe
+  - git ls-files src/ | xargs clang-format -i && git diff --exit-code && make && bin/geometry_test
